Add greeting to myslef to the top of the page

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
         <link rel="stylesheet" href="styles.css" />
     </head>
     <body>
+        <h1> Hello Prince Luah Marwiah 🧑🏽 </h1>
         <div class="outer-div"> <!-- Div outside the card div that give another border -->
             <div class="card">
                 <img class="avatar" src="images/prince.jpg">
